--- a/PlanterTake3/app/src/main/AndroidManifest.xml
+++ b/PlanterTake3/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".NewEntry" />
+        <activity android:name=".RecentEntry"></activity>
     </application>
 
 </manifest>
