This is just an update to everything.

--- a/PlanterTake3/app/src/main/AndroidManifest.xml
+++ b/PlanterTake3/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".NewEntry" />
-        <activity android:name=".RecentEntry"></activity>
+        <activity android:name=".RecentEntry" />
+        <activity android:name=".RecentFieldName"></activity>
     </application>
 
 </manifest>
